# iot_libbutton

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog.md  Makefile.common  NEWS.md  README.md  configure.pre  library.json.in  library.properties.in  version.sh
doc/: Doxyfile.in  Makefile.am
examples/: simple.c  simple.cpp
simulation/: Makefile.am  simulate.cpp  test.cpp
src/: Makefile.am  button.cpp  button.h  button.pc.in  test.cpp
utests/: Makefile.am  main.cpp  ut_button.h
utests/fixtures/: Arduino.cpp  Arduino.h  Makefile.am
